# your-manager-frontend

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html
public/: index.html
src/: app.rs  main.rs  router.rs
src/api/: auth.rs  mod.rs
src/components/: mod.rs  sign_in_form.rs  sign_up_form.rs
src/pages/: home.rs  mod.rs  sign_in.rs  sign_up.rs  sign_up_success.rs
