[package]
name = "your-manager-ui"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = { version="0.18" }
web-sys = { version = "0.3.66", features = [] }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.89"
serde = "1.0.193"
wasm-bindgen-futures = "0.4.39"